añado imagenes en el portafolio

--- a/miportafolio/index.html
+++ b/miportafolio/index.html
@@ -10,7 +10,9 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">JN</div>
+        <div class="logo">
+            <img src="imagenes/1.jpg" alt="Logo" style="width:100%;height:100%;object-fit:cover;border-radius:12px;">
+        </div>
         <div>
           <div style="font-weight:700">Jia Hao</div>
           <div style="font-size:13px;color:var(--muted)">Desarrollador · Diseñador · Huércal-Overa</div>
@@ -42,7 +44,10 @@
       </div>
 
       <aside class="card profile">
-        <div class="avatar">TN</div>
+        <div class="avatar">
+          <img src="imagenes/1.jpg" alt="Mi foto" style="width:100%;height:100%;object-fit:cover;border-radius:20px;">
+        </div>
+
         <div style="font-weight:700">Jia Hao</div>
         <div class="meta">jiahaolinyt@gmail.com · +34 662 346 489</div>
         <div style="margin-top:8px;color:var(--muted);font-size:13px">Mi contacto</div>
