--- a/miportafolio/index.html
+++ b/miportafolio/index.html
@@ -61,6 +61,7 @@
       </div>
 
     <section id="contact" class="card contact">
+  <h1 style="grid-column: span 2; text-align: center; margin-bottom: 10px;">Contáctame</h1>
       <div>
         <label for="name" style="font-size:13px;color:var(--muted)">Nombre</label>
         <input id="name" placeholder="Tu nombre" />
